@@ -6647,3 +6647,6 @@ PACKAGE: 2.2.99.2
  * Modified oai interface to support seconds granularity, fixing #3227 in a
     different way
 
+2008-01-18 cjg
+ * Multiple field tables now get a primary key, although this isn't created
+    if you upgrade (yet).
